[tool.poetry]
name = "web-9"
version = "0.1.0"
description = ""
authors = ["Yaroslav <svyatikua@gmail.com>"]
readme = "README.md"
packages = [{include = "web_9"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
